--- a/pt2a2/A2ex1.html
+++ b/pt2a2/A2ex1.html
@@ -10,13 +10,13 @@
 <body>
     <h1>COMO RULAR UN BLUNT</h1>
     <h2>Introducció</h2>
-    <p id="primer" class="classe0">En aquesta pagina ensenyarem com rular un blunt de la millor manera</p>
+    <p id="primer" class="classe0">En aquesta pagina ensenyarem com rular un petardo de la millor manera</p>
     <h3>Pasos a seguir</h3>
 
     <p class="classe1">1. Ara elegim els grams que vols consumir i els posem al grinder per molir la herba</p>
     <p class="classe2">2. Ara farem el carto per fer la boquilla, agarrem un pape de liar L i posem la herba i una cantidad no molt abundant de tabac</p>
-    <p class="classe3">3. Ara començarem a rular el porro com si es tractes de un cigarro normal</p>
-    <p class="classe4">4. Ara prensarem el blunt amb la pedra del mechero i ja el tindre preparat el nostre blunt</p>
+    <p class="classe3">3. Ara començarem a rular el petardo com si es tractes de un cigarro normal</p>
+    <p class="classe4">4. Ara prensarem el petardo amb la pedra del mechero i ja el tindre preparat el nostre petardo</p>
 
     <blockquote cite="https://eurogrow.es/1399-bancos-de-semillas-de-marihuana">
         "Aqui tenim bancos de semillas per cultivar."
