--- a/pt2a2/A2ex1.html
+++ b/pt2a2/A2ex1.html
@@ -3,12 +3,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Pagina de cracked.">
-    <meta name="keywords" content="blunt, rular, guia, herba, tabac, tutorial">
+    <meta name="keywords" content="petardo, rular, guia, herba, tabac, tutorial">
     <link rel="stylesheet" href="A2ex1.css">
     <title>Pagina de cracked</title>
 </head>
 <body>
-    <h1>COMO RULAR UN BLUNT</h1>
+    <h1>COMO RULAR UN PETARDO</h1>
     <h2>Introducció</h2>
     <p id="primer" class="classe0">En aquesta pagina ensenyarem com rular un petardo de la millor manera</p>
     <h3>Pasos a seguir</h3>
