--- a/A8/index.html
+++ b/A8/index.html
@@ -22,7 +22,7 @@
                 data.forEach(prediccio => {
                     output += `
                         <div class="forecast">
-                            <h3>${prediccio.diaPredit}</h3>
+                            <h3>Predicció del dia</h3>
                             <p><strong>Estat del Cel:</strong> ${prediccio.versio.variables.estatDelCel}</p>
                             <p><strong>Precipitacions:</strong> ${prediccio.versio.variables.precipitacions}</p>
                             <p><strong>Temperatures:</strong> ${prediccio.versio.variables.temperatures}</p>
