--- a/A8/index.html
+++ b/A8/index.html
@@ -4,10 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Predicció del Temps</title>
-    <style>
-        body { font-family: Arial, sans-serif; }
-        .forecast { margin: 10px 0; padding: 10px; border: 1px solid #ccc; }
-    </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <h1>Predicció del Temps</h1>
@@ -22,7 +19,7 @@
                 data.forEach(prediccio => {
                     output += `
                         <div class="forecast">
-                            <h3>Predicció del dia</h3>
+                            "<h3>Previsio del dia</h3>"
                             <p><strong>Estat del Cel:</strong> ${prediccio.versio.variables.estatDelCel}</p>
                             <p><strong>Precipitacions:</strong> ${prediccio.versio.variables.precipitacions}</p>
                             <p><strong>Temperatures:</strong> ${prediccio.versio.variables.temperatures}</p>
